# QVTKTransformation

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
design/: mainwindow.ui
images/: images.qrc
include/: Data.hpp  MainWindow.hpp  Scene.hpp  SceneDataHandler.hpp  SceneWindowHandler.hpp
lib/Transform/: CMakeLists.txt
lib/Transform/include/: Transform.hpp
src/: Data.cpp  MainWindow.cpp  Scene.cpp  SceneDataHandler.cpp  SceneWindowHandler.cpp  main.cpp
